--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>jakarta.persistence</groupId>
+    		<artifactId>jakarta.persistence-api</artifactId>
+    		<version>3.0.0</version> <!-- Ou a versão mais recente -->
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version> <!-- Você pode substituir pela versão mais recente -->
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.10.0</version> <!-- Versão específica do Mockito -->
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
